--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1947,3 +1947,6 @@ section {
   outline: 0;
 }
 
+/*--------------------------------------------------------------
+# Product Detail
+--------------------------------------------------------------*/
